# sopel-color-text

./: NEWS  README.md  setup.cfg  setup.py
sopel_colors/: __init__.py
sopel_rainbow/: __init__.py
