[metadata]
name = sopel-color-text
version = 0.4.0
description = A Sopel plugin to add some colored text options.
author = xnaas
url = https://github.com/xnaas/sopel-color-text
license = Eiffel Forum License, version 2
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    sopel>=7.0,<9

[options.entry_points]
sopel.plugins =
    colors = sopel_colors
